# dict-generator

./: README.md  pyproject.toml
examples/: company-schema.json
src/dict_generator/: generator.py
src/dict_generator/app/: server.py
src/dict_generator/app/templates/: index.html
tests/: test_generator.py
