[project]
name = "dict-generator"
version = "0.1.0"
description = "generate dict via schema"
authors = [
    {name = "Panaintescu Adrian Valentin", email = "adrian.cert@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
